# email-api

./: .env.example  Dockerfile  pyproject.toml  railway.toml
app/: config.py  email_service.py  main.py  models.py
